Add new pad button and containing div

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Etch-A-Sketch</title>
     </head>
     <body>
+        <div id="#button-div">
+            <button id="new-pad" name="new-pad">New pad</button>
+        </div>
         <div id="container"></div>
         <script src="./scripts/etch-a-sketch.js"></script>
     </body>
