Tweak css for nicer presentation; fix minor mistake in button div id

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Etch-A-Sketch</title>
     </head>
     <body>
-        <div id="#button-div">
+        <div id="button-div">
             <button id="new-pad" name="new-pad">New pad</button>
         </div>
         <div id="container"></div>
